--- a/app/src/assets/styles/views/fevermap-data-entry.scss
+++ b/app/src/assets/styles/views/fevermap-data-entry.scss
@@ -21,7 +21,7 @@
   top: 1rem;
   right: 1rem;
   z-index: 999;
-  color: $white;
+  color: $gunmetal;
   material-icon {
     font-size: 2rem;
     span {
