Add possibility to send queued entries
Should fix problems like #82 Closes #82

--- a/app/src/assets/styles/views/fevermap-data-view.scss
+++ b/app/src/assets/styles/views/fevermap-data-view.scss
@@ -39,6 +39,18 @@
   }
 }
 
+.queued-entries {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 50%;
+
+  .mdc-button {
+    background: $bluegreen !important;
+  }
+}
+
 .persistent-info-fields {
   display: flex;
   flex-direction: row;
@@ -207,6 +219,10 @@
 
 
 @media only screen and (max-width: 780px) {
+
+  .queued-entries {
+    width: 100%;
+  }
 
   .fevermap-data-view-content {
     max-width: 100%;
