Add check for last submission time and disable button if needed

--- a/app/src/assets/styles/views/fevermap-data-view.scss
+++ b/app/src/assets/styles/views/fevermap-data-view.scss
@@ -19,6 +19,11 @@
     .mdc-button {
       background: $bluegreen;
     }
+    &--disabled {
+      .mdc-button {
+        background: #30bfbf99;
+      }
+    }
   }
 }
 
