Add install prompt for iOS devices

--- a/app/src/assets/styles/imports.scss
+++ b/app/src/assets/styles/imports.scss
@@ -11,6 +11,7 @@
 @use "compontents/select-field";
 @use "compontents/snackbar";
 @use "compontents/fever-chart";
+@use "compontents/ios-pwa-install-prompt";
 
 // External
 
