--- a/app/src/assets/styles/imports.scss
+++ b/app/src/assets/styles/imports.scss
@@ -13,6 +13,7 @@
 @use "compontents/fever-chart";
 @use "compontents/ios-pwa-install-prompt";
 @use "compontents/birth-year-range-selector";
+@use "compontents/language-choose-dialog";
 
 // External
 
