--- a/app/src/assets/styles/compontents/visualization-map.scss
+++ b/app/src/assets/styles/compontents/visualization-map.scss
@@ -16,3 +16,10 @@
   50% {background-position: 100% 50%}
   100% {background-position: 0 50%}
 }
+
+.country-info-container {
+  background: #FFF;
+  padding: 0.5rem 1rem;
+  box-shadow: 0 1px 5px rgba(0,0,0,0.65);
+  border-radius: 4px;
+}
