Add sub/unsub button to view and feedback through snackbar

--- a/app/src/assets/styles/views/fevermap-data-view.scss
+++ b/app/src/assets/styles/views/fevermap-data-view.scss
@@ -27,6 +27,33 @@
   }
 }
 
+.unsubscribe-from-notifications, .subscribe-to-notifications {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 4rem;
+}
+
+.unsubscribe-from-notifications {
+  material-button {
+    .mdc-button {
+      &:not(:disabled) {
+        background: $bluegreendarker;
+      }
+    }
+  }
+}
+
+.subscribe-to-notifications {
+  material-button {
+    .mdc-button {
+      &:not(:disabled) {
+        background: $bluegreen;
+      }
+    }
+  }
+}
+
 .entry-info-view-wrapper {
   padding: 0 1rem;
 
