Add handler for old age types.
- Update style to have pointer cursor
- Add new date fields to data view

--- a/app/src/assets/styles/imports.scss
+++ b/app/src/assets/styles/imports.scss
@@ -12,6 +12,7 @@
 @use "compontents/snackbar";
 @use "compontents/fever-chart";
 @use "compontents/ios-pwa-install-prompt";
+@use "compontents/birth-year-range-selector";
 
 // External
 
