--- a/app/src/assets/styles/palette.scss
+++ b/app/src/assets/styles/palette.scss
@@ -1,5 +1,6 @@
 /* RGB */
 $bluegreen: rgb(48, 191, 191);
+$bluegreenlighter: change-color($bluegreen, $lightness: 93%);
 $bluegreendarker: rgb(37, 147, 147);
 $deeppurple: rgb(159, 43, 104);
 $deeppurpledarker: rgb(133, 36, 87);
