--- a/app/src/assets/styles/compontents/birth-year-range-selector.scss
+++ b/app/src/assets/styles/compontents/birth-year-range-selector.scss
@@ -1,19 +1,25 @@
 .birth-year-range-selectors {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  // display: flex;
+  // flex-direction: row;
+  // flex-wrap: wrap;
+  // justify-content: space-between;
+  // margin: -0.25rem; //hack to make flex items align with edge
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(6rem, 1fr));
+  grid-gap: 0.8rem;
 
   .birth-year-range-selector {
     border-radius: 5px;
-    background: #FFF;
-    flex-basis: calc(30% - 1rem);
+    background: #fff;
+
+    // flex-basis: calc(30% - 1rem);
     padding: 0.5rem;
     text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 0.5rem;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
+    // margin: 0.25rem;
     transition: 0.1s ease-in;
     cursor: pointer;
 
@@ -24,7 +30,7 @@
     &--selected {
       background: #32cd32;
       p {
-        color: #FFF;
+        color: #fff;
       }
     }
   }
@@ -34,7 +40,7 @@
   .birth-year-range-selectors {
     .birth-year-range-selector {
       p {
-        font-size: 0.6rem
+        font-size: 0.6rem;
       }
     }
   }
