--- a/app/src/assets/styles/views/fevermap-data-entry.scss
+++ b/app/src/assets/styles/views/fevermap-data-entry.scss
@@ -556,7 +556,7 @@ input[type="range"]::-webkit-slider-runnable-track {
       .entry-field {
         width: 100%;
         p {
-          margin: 0 0 0.5rem;
+          // margin: 0 0 0.5rem;
         }
 
         .gender-input-holder {
