--- a/app/src/assets/styles/views/fevermap-data-entry.scss
+++ b/app/src/assets/styles/views/fevermap-data-entry.scss
@@ -63,6 +63,7 @@
 
   .entry-field {
     margin-bottom: 4rem;
+    max-width: 40rem;
   }
 
   p {
@@ -79,6 +80,9 @@
   flex-direction: row;
   justify-content: space-between;
   border-radius: 5px;
+  max-width: 30rem;
+  margin-left: auto;
+  margin-right: auto;
 
   &--none-selected {
     background: ghostwhite;
