Re-implement website with Hugo
Hugo makes it easier to build a website with more contents, for
example blog posts describing Fevermap's progress and results from
the POC.

Also refine the front page announcement and hide phone numbers.

--- a/website/themes/fevermap/static/index.css
+++ b/website/themes/fevermap/static/index.css
@@ -258,9 +258,10 @@ button {
     font-family: Karla;
 }
 
-section.mission {
+section.mission, section.posts-list p, section.post {
     max-width: 60rem;
 }
+
 
 #presentations iframe {
     margin: 1rem;
